--- a/flask/principal.html
+++ b/flask/principal.html
@@ -1,18 +1,17 @@
 <!-- The buttons to control the stream -->
-<div class="button-group">
-  <button id="btn-start" type="button" class="button">Start Streaming</button>
-  <button id="btn-stop" type="button" class="button">Stop Streaming</button>
-  <button id="btn-capture" type="button" class="button">Capture Image</button>
+<div class="button-group"> Iniciar la camara </button>
+  <button id="btn-stop" type="button" class="button"> Detener la camara </button>
+  <button id="btn-capture" type="button" class="button"> Capturar la Imagen </button>
 </div>
 
 <!-- Video Element & Canvas -->
 <div class="play-area">
   <div class="play-area-sub">
-    <h3>The Stream</h3>
+    <h3> Camara </h3>
     <video id="stream" width="320" height="240"></video>
   </div>
   <div class="play-area-sub">
-    <h3>The Capture</h3>
+    <h3> Captura de la Imagen </h3>
     <canvas id="capture" width="320" height="240"></canvas>
     <div id="snapshot"></div>
   </div>
